Add resume analysis pipeline and LLM integration
Introduce a full resume analysis feature powered by an LLM provider and deterministic scoring.

- New resume API, controller, service, assembler and configuration (app.resume properties).
- Add AI abstraction (AiProvider), Polza implementation, LLM request prompt factory, response parser and validator.
- Add PDF handling (PdfFileValidator, PdfBoxTextExtractor) and include Apache PDFBox dependency.
- Add domain scoring and policies: TechnologyTaxonomy, AtsScoreCalculator, ExperienceCalculator, ScoreMath, Overall/Candidate/Interview policies.
- Add error model (ResumeAnalysisException, ResumeErrorCode) and extend ApiExceptionHandler for file/AI errors.
- Refactor AtsScoringProperties and VacancyMarketAggregator to use TechnologyTaxonomy; remove legacy Polza repair/parser classes.
- Add many unit/integration tests for AI parsing, provider, service, domain and PDF processing.
- Add graphify hooks (AGENTS.md, .codex/hooks.json) and ignore graphify-out in .gitignore.

Removes old polza-specific parsing/repair classes and replaces them with a robust LLM-centered pipeline and deterministic backend calculations.